frontend/src/app/(app)/upload/page.module.css
.pageEmpty {
    grid-row: 1 / -1;
    height: 100%;
    display: flex;
    align-items: center; /* vertical */
    justify-content: center; /* horizontal */
}

.page {
    grid-row: 1 / -1;
    height: 100%;
    display: flex;
    flex-direction: column;
    padding: 24px 28px;
    box-sizing: border-box;
}

.toolbar {
    align-self: flex-start;
    margin-bottom: 16px;
}

.gallery {
    flex: 1;
    min-height: 0;
    overflow-y: auto;
    margin-right: 28px;
}

.gallery_tags_container {
    flex: 1;
    display: flex;
    flex-direction: row;
    height: 100%;
}

